--- a/docroot/themes/custom/cu2017/sass/custom/_slideshow.scss
+++ b/docroot/themes/custom/cu2017/sass/custom/_slideshow.scss
@@ -107,6 +107,7 @@
 
     .slide_text_wrapper {
       background: transparent !important;
+      max-width: 1300px;
       margin: 0 auto;
       position: relative;
       top: -4%;
